--- a/c2/SoundexProject/Soundex/CMakeLists.txt
+++ b/c2/SoundexProject/Soundex/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_executable(mainS main.cpp Soundex.cpp)
 
+include_directories(headers)
+
+add_executable(mainProject src/main.cpp src/Soundex.cpp)
