--- a/c2/SoundexProject/CMakeLists.txt
+++ b/c2/SoundexProject/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.11)
 
 project(SoundexProject)
 
 enable_testing()
 
 add_subdirectory(Soundex)
+add_subdirectory(googleTest)
 add_subdirectory(SoundexTest)
