--- a/c2/SoundexProject/CMakeLists.txt
+++ b/c2/SoundexProject/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+set(CMAKE_CXX_STANDARD 11) 
 
 project(SoundexProject)
 
