--- a/c5_test_double/HttpGetTest/CMakeLists.txt
+++ b/c5_test_double/HttpGetTest/CMakeLists.txt
@@ -4,9 +4,10 @@ enable_testing()
 
 find_package (GTest REQUIRED)
 
-include_directories (${HttpGetDirectories})
+include_directories (${HttpGetHeaders})
+message("${HttpGetHeaders}")
 
-add_executable (HttpGetDataTest mainTest.cpp HttpGetDataTest.cpp)
+add_executable (HttpGetDataTest mainTest.cpp HttpGetDataTest.cpp )
 
 target_link_libraries(HttpGetDataTest GTest::GTest GTest::Main gmock_main HttpGetDataLibrary)
 
